# dds

./: .gitignore  .gitmodules  .rustc_info.json  Cargo.toml  README.md  bench.sh
bench/: Cargo.toml  build.rs
bench/src/: main.rs
css-parser/: Cargo.toml
css-parser/src/: main.rs
dds/: Cargo.toml
dds-api/: Cargo.toml
dds-core/: Cargo.toml
dds-core/old/: wasi_example.rs
dds-core/src/: error.rs  main.rs  vulkan.rs  vulkan_utils.rs  window.rs
dds-parser/: Cargo.toml
dds-parser/src/: error.rs  lib.rs  node.rs  node_tree.rs  tag.rs
dds-parser/src/tests/: mod.rs
dds-rust-api/: Cargo.toml
dds-rust-api/src/: lib.rs
dds-rust-api/src/std/: mod.rs
dds-rust-example/: Cargo.toml
dds-rust-example/src/: lib.rs  main.rs
dds-utils/: Cargo.toml
dds-utils/src/: lib.rs
dds-utils/src/tree/: mod.rs
dds-wasm-api/: Cargo.toml
dds-wasm-api/src/: lib.rs
dds/old/: wasm.rs
dds/src/: arena_tree.rs  main.rs
html-parser/: Cargo.toml  README.md
html-parser/benches/: tree_builder.rs
html-parser/diagrams/: gen_diagram.sh  parser.dot  tokenizer.dot
html-parser/src/: error.rs  lib.rs  parser.rs  preproccesor.rs  states.rs  tokenizer.rs
html-parser/src/old/: one.rs
html-parser/src/testing_bin/: main.rs  old_main.rs
html-parser/src/tests/: mod.rs  tokenizer.rs  tokenizer_general_use_cases.rs
html-parser/tests/: lib.rs  main.rs
html-prettify/src/: main.rs
old/log/src/: lib.rs  macros.rs
old/simplelog/: Cargo.toml
old/simplelog/src/: lib.rs
old/simplelog/src/loggers/: logging.rs
old/termcolor/: Cargo.toml
render-beast/: Cargo.toml
resources/: test.html
rust/: Cargo.toml
rust/dds/: Cargo.toml
rust/dds-api/: Cargo.toml
rust/dds-api/src/: lib.rs
rust/dds-core/: Cargo.toml
rust/dds-core/src/: lib.rs  main.rs
rust/dds-lib/: Cargo.toml
rust/dds/src/: arena_tree.rs  exports.rs  main.rs
rust/html-parser/: Cargo.toml
rust/html-parser/src/: document.rs  element.rs  lib.rs  old.rs  parser.rs  preproccesor.rs  states.rs  tokenizer.rs  tree.rs
rust/html-parser/src/tests/: mod.rs  tokenizer.rs
rust/html-prettify/: Cargo.toml
rust/html-prettify/src/: main.rs
rust/wasm-vm/: Cargo.toml
wasm/: Cargo.toml
wasm-vm/: Cargo.toml
wasm-vm/src/: lib.rs  main.rs
wasm/dds-api/: Cargo.toml
wasm/dds-api/src/: lib.rs
wasm/dds-app/: Cargo.toml
wasm/dds-app/src/: lib.rs
wasm/dds-bindings/: Cargo.toml
wasm/dds-bindings/src/: lib.rs
wasm/dds-example/: Cargo.toml
wasm/dds-example/src/: main.rs
