[workspace]
members = ["bench",
    "deps/simplelog",
    "deps/log",
    "deps/termcolor",
    "css-parser",
    "html-parser",
    "dds",
    "dds-api",
    "deps/indextree",
    "deps/ash/ash",
    "deps/ash/ash-window",
    "deps/ash/examples",
    "deps/ash/generator",
    "render-beast",
    "deps/x11-rs/x11"
    ]
default-members = ["dds"]


[profile.dev]
opt-level = 0
lto = "off"
incremental = true
codegen-units = 32

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1