[workspace]
members = [
    # "deps/simplelog",
    # "deps/log",
    # "deps/termcolor",
    # "css-parser",
    # "html-parser",
    "dds-core",
    # "dds-api",
    # "deps/indextree",
    # "render-beast",
    ]
default-members = ["dds-core"]


[profile.dev]
opt-level = 0
lto = "off"
incremental = true
codegen-units = 32

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1