[workspace]
members = [
    # "deps/simplelog",
    # "deps/log",
    # "deps/termcolor",
    # "css-parser",
    "html-parser",
    # "dds-core",
    "dds-utils",
    # "dds-api",
    # "render-beast",
    ]
default-members = ["dds-utils", "html-parser"]


[profile.dev]
opt-level = 0
lto = "off"
incremental = true
codegen-units = 32

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1