cargo-features = ["per-package-target"]

[package]
name = "dds-rust-example"
version = "0.1.0"
edition = "2021"
forced-target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dds-rust-api = { path = "../dds-rust-api" }