[package]
name = "dds"
version = "0.1.0"
edition = "2021"
default-run = "dds"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-parser = { path = "../html-parser" }
dds-api = { path = "../../dds-api" }
indextree = { path = "../indextree" }
simplelog = { path = "../simplelog"}
log = { path = "../log"}