[package]
name = "dds"
version = "0.1.0"
edition = "2021"
default-run = "dds"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dds-api = { path = "../dds-api" }
indextree = { path = "../deps/indextree" }
simplelog = { path = "../deps/simplelog"}
log = { path = "../deps/log"}