[package]
name = "html-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = {path = "../deps/indextree" }
log = { path = "../deps/log" }
simplelog = { path = "../deps/simplelog" }
dds-utils = { path = "../dds-utils" }

[dev-dependencies]
criterion = "0.3"

[features]
default = [
    # Uncomment these to enable comprehensive debug info.
    #"tokenizer-log",
    #"parser-log",
    ]
tokenizer-log = []
parser-log = []

# [[bin]]
# name = "html_testing_bin"
# path = "src/testing_bin/main.rs"

[[bench]]
name = "tree_builder"
harness = false