[package]
name = "dds"
version = "0.1.0"
edition = "2021"
default-run = "dds"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-parser = { path = "../html-parser" }
dds-api = { path = "../dds-api" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.3.3"

[dependencies.wasmi]
version = "0.9.1"
default-features = false
features = ["core"]
